# vibecodekit-hybrid-ultra

./: .gitignore  BENCHMARKS-METHODOLOGY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-third-party.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.17.0.md  RELEASE_NOTES_v0.18.0.md  RELEASE_NOTES_v0.19.0.md  RELEASE_NOTES_v0.20.0.md  RELEASE_NOTES_v0.21.0.md  RELEASE_NOTES_v0.22.0.md  RELEASE_NOTES_v0.23.0.md  RELEASE_NOTES_v0.24.0.md  RELEASE_NOTES_v0.25.0.md  SECURITY.md  SKILL.md  USAGE_GUIDE.md  manifest.llm.json  mypy.ini  pyproject.toml  tools.json
.github/workflows/: actionlint.yml  ci.yml  codeql.yml  security.yml  version-gate.yml
.vibecode/runtime/: denials.json
assets/: plugin-manifest.json
assets/scaffolds/blog/: manifest.json
assets/scaffolds/blog/nextjs/: tailwind.config.ts
assets/scaffolds/blog/nextjs/design/: tokens.json
assets/scaffolds/dashboard/: manifest.json
assets/scaffolds/dashboard/nextjs/: package.json  tailwind.config.ts
assets/scaffolds/dashboard/nextjs/app/: page.tsx
assets/scaffolds/dashboard/nextjs/design/: tokens.json
assets/scaffolds/dashboard/nextjs/lib/: cn.ts
assets/scaffolds/landing-page/: manifest.json
assets/scaffolds/landing-page/nextjs/: tailwind.config.ts
assets/scaffolds/osint-terminal/: manifest.json
assets/scaffolds/osint-terminal/nextjs/: .env.example  README.md  package.json  tailwind.config.ts
assets/scaffolds/osint-terminal/nextjs/app/: globals.css  layout.tsx  page.tsx
assets/scaffolds/portfolio/: manifest.json
assets/scaffolds/portfolio/nextjs/: tailwind.config.ts
assets/scaffolds/saas/: manifest.json
assets/scaffolds/saas/nextjs/: package.json  tailwind.config.ts
assets/scaffolds/saas/nextjs/app/: page.tsx
assets/scaffolds/shop-online/: manifest.json
assets/scaffolds/shop-online/nextjs/: tailwind.config.ts
benchmarks/: intent_router_0.17.0.json  intent_router_0.18.0.json  intent_router_0.19.0.json  intent_router_0.20.0.json  intent_router_0.21.0.json  intent_router_0.22.0.json  intent_router_0.23.0.json  intent_router_0.24.0.json  intent_router_0.25.0.json
docs/: AUDIT-v0.14.0.md  GUIDE_NONTECH_BEGINNER.md  INTEGRATION-PLAN-v0.15.md
examples/: 01_permission_engine.py  02_scaffold_preview.py  03_mcp_selfcheck.py  04_vn_faker.py  05_vn_error_translator.py  06_quality_gate.py  07_tool_use_parser.py  08_worktree_executor.py  README.md
references/: 00-overview.md  34-style-tokens.md  37-color-psychology.md  38-font-pairing.md  39-intent-routing-llm-primary.md  40-ethos-vck.md  41-component-library-pattern.md  42-osint-terminal-template.md  anti-patterns-gallery.md
references/examples/01-otb-budget-module/: 00-scan-report.md  01-rri-requirements.md  02-vision.md  03-blueprint.md  04-task-graph.md  07-rri-t-results.jsonl  08-rri-ux-results.jsonl  09-coverage-matrix.md  10-verify-report.md  README.md
references/examples/01-otb-budget-module/05-tips/: tip-001-spec.md  tip-002-spec.md  tip-003-spec.md
references/examples/01-otb-budget-module/06-completion-reports/: tip-001-report.md  tip-002-report.md  tip-003-report.md
scripts/vibecodekit/: __init__.py  _audit_allowlist.json  _audit_log.py  cli.py  conformance_audit.py  dashboard.py  denial_store.py  design_tokens_export.py  doctor.py  eval_select.py  install_manifest.py  intent_router.py  learnings.py  mcp_client.py  module_workflow.py  permission_engine.py  pipeline_router.py  refine_boundary.py  scaffold_engine.py  security_classifier.py  session_ledger.py  subagent_runtime.py  task_runtime.py  team_mode.py  tool_executor.py  verb_router.py
scripts/vibecodekit/browser/: __init__.py  cli_adapter.py  commands_read.py  commands_write.py  manager.py  permission.py  security.py  server.py  snapshot.py  state.py
scripts/vibecodekit/conformance/: __init__.py  _helpers.py  _registry.py  _runner.py  probes_assets.py  probes_governance.py  probes_methodology.py  probes_runtime.py
scripts/vibecodekit/mcp_servers/: core.py  selfcheck.py
tests/: test_anti_patterns_gallery.py  test_audit_probe_85_no_orphan.py  test_browser_manager.py  test_canonical_org_no_bypass.py  test_case_study_otb_budget.py  test_codeql_workflow_present.py  test_color_psychology_appendix.py  test_conformance_package_skeleton.py  test_content_depth.py  test_deprecated_frontmatter.py  test_design_tokens_export.py  test_docs_count_sync.py  test_doctor_skill_repo.py  test_eval_select.py  test_examples_run.py  test_font_pairing_appendix.py  test_hook_interceptor_and_auto_commit.py  test_intent_router_docstring_contract.py  test_intent_router_golden.py  test_learnings_and_team.py  test_lockfile_present.py  test_logging_config.py  test_manifest_llm_and_auto_writeback.py  test_manifest_llm_json_no_yaml_leakage.py  test_mcp_client_and_cli_adapter.py  test_mcp_core_server.py  test_memory_writeback.py  test_mypy_strict_clean.py  test_no_further_rebrands.py  test_orphan_module_smoke.py  test_permission_engine_strict_deny.py  test_phase5_module_polish.py  test_phase6_small_modules_polish.py  test_phase6_task_runtime_module_workflow.py  test_pipeline_v015_alpha.py  test_pipeline_v015_pr_b.py  test_pipeline_v015_pr_c.py  test_public_api_dataclass.py  test_repo_urls_canonical.py  test_security_classifier.py  (+16 more)
tests/browser/: test_commands_permission.py  test_security_envelope.py  test_snapshot.py  test_state_atomic.py
tests/fixtures/: intent_router_golden.jsonl
tools/: dump_intent_confusion.py  gen_tools_json.py  sync_version.py
update-package/: .claw.json  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  USAGE_GUIDE.md
update-package/.claude/agents/: qa-lead.md  reviewer.md
update-package/.claude/commands/: vck-canary.md  vck-ceo-review.md  vck-cso.md  vck-design-consultation.md  vck-design-review.md  vck-eng-review.md  vck-investigate.md  vck-learn.md  vck-office-hours.md  vck-pipeline.md  vck-qa-only.md  vck-qa.md  vck-retro.md  vck-review.md  vck-second-opinion.md  vck-ship.md  vibe-rri-t.md  vibe-rri-ui.md  vibe-rri-ux.md  vibe-scaffold.md  vibe-ship.md  vibe.md
update-package/.claw/hooks/: post_tool_use.py  pre_tool_use.py  session_start.py
(+7 files in other folders)
