[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecodekit-hybrid-ultra"
version = "0.16.2"
description = "Defensive, audit-driven runtime + skill bundle for AI-assisted coding workflows. VIBECODE-MASTER methodology + RRI question banks + permission engine + scaffold engine + 67-probe audit + sub-second browser daemon."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "VibecodeKit Hybrid Ultra contributors" },
]
keywords = ["claude-code", "agentic", "skill", "vibecode", "rri", "vibecodekit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
# Core runtime: stdlib-only — preserves the "Python-pure" DNA.
dependencies = []

[project.optional-dependencies]
# `pip install "vibecodekit-hybrid-ultra[browser]"` to enable /vck-qa and the
# sub-second Python browser daemon (architecture inspired by gstack/browse).
browser = [
    "playwright>=1.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
]
# `pip install "vibecodekit-hybrid-ultra[ml]"` enables the ONNX
# prompt-injection classifier layer + Haiku transcript verifier.
# Core regex layer runs without this extra.
ml = [
    "onnxruntime>=1.17.0",
    "transformers>=4.40.0",
    "httpx>=0.26.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
all = [
    "vibecodekit-hybrid-ultra[browser,ml,dev]",
]

[project.urls]
Homepage = "https://github.com/VibecodekitPJ6/vibecodekit-hybrid-ultra"
Issues = "https://github.com/VibecodekitPJ6/vibecodekit-hybrid-ultra/issues"
Changelog = "https://github.com/VibecodekitPJ6/vibecodekit-hybrid-ultra/blob/main/CHANGELOG.md"

[project.scripts]
vibecodekit = "vibecodekit.cli:main"

[tool.setuptools]
package-dir = { "" = "scripts" }

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["vibecodekit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "browser: requires the [browser] optional extras (playwright, fastapi, uvicorn).",
    "ml: requires the [ml] optional extras (onnxruntime, transformers, httpx).",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# PR2: bật pyflakes-only rules (unused import / unused local / shadowed import).
# Style rules cố tình KHÔNG bật ở giai đoạn này để tránh diff lớn / fight với
# convention hiện tại (PEP8, naming).  Mở rộng select set ở PR sau nếu cần.
select = ["F401", "F841", "F811"]

# Cycle 6 PR3 (Phase 1, fail_under=60): chỉ siết tool_executor.py >=80%.
# Cycle 7 PR2 (Phase 2a, fail_under=70): vn_faker / vn_error_translator /
#   team_mode đã >=98%.  ``cli.py`` được đưa vào ``omit`` vì là user-facing
#   stdout entry point (96 prints intentional — đã carve-out cycle 6 PR4).
#   ``deploy_orchestrator.py`` cũng tạm omit cho tới cycle 8 (tốn nhiều
#   subprocess mock — phù hợp PR riêng).
# Cycle 8 PR2 (Phase 2b, fail_under=72): polish vn_error_translator coverage
#   với 3 test bổ sung (graceful degrade khi PyYAML absent, multi-YAML
#   ranking, multi-line traceback chain).  Floor +2pp từ 70 → 72 để khoá
#   actual achievement (72% với toolchain dev hiện tại) sau cycle 7.  Mục
#   tiêu 75% (spec ban đầu) yêu cầu mở scope sang memory_writeback / 
#   manifest_llm (đều 0%) — phù hợp Phase 3 hơn Phase 2b.
# Phase 3 (cycle sau): cover deploy_orchestrator + browser/manager + đưa
#   cli.py trở lại scope (qua subprocess test) → global TOTAL >=80%.
[tool.coverage.run]
source = ["scripts/vibecodekit"]
omit = [
  "scripts/vibecodekit/_audit_allowlist.json",
  "scripts/vibecodekit/cli.py",
  "scripts/vibecodekit/deploy_orchestrator.py",
  "*/tests/*",
  "*/examples/*",
]

[tool.coverage.report]
fail_under = 72
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.coverage.paths]
source = ["scripts/vibecodekit/", "*/scripts/vibecodekit/"]
